[gd_scene load_steps=2 format=3 uid="uid://cgl0ojfqutjji"]

[ext_resource type="Script" path="res://Dialogue/npc_dialogue.gd" id="1_7uimo"]

[node name="NPC Dialogue" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7uimo")

[node name="DialogueBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -327.0
offset_top = -69.5
offset_right = 327.0
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.501961)

[node name="NPCText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -327.0
offset_top = -69.5
offset_right = 327.0
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -105.0
offset_right = 75.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
text = "Next"

[node name="DialogueShow" type="Timer" parent="."]

[connection signal="pressed" from="NextButton" to="." method="_on_continue_button_pressed"]
